--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "type": "module",
   "dependencies": {
-    "nostr-tools": "^2.17.0"
+    "nostr-tools": "2.20.0"
   },
   "devDependencies": {
-    "@types/node": "^24.5.2",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.2"
+    "@types/node": "^25.1.0",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3"
   }
 }
